@startuml

title __MESSAGES's Class Diagram__\n

  namespace com.messages {
    class com.messages.Message {
        - channel : String
        - count : int
        - list : ArrayList<User>
        - msg : String
        - name : String
        - picture : String
        - pictureMsg : byte[]
        - users : ArrayList<User>
        - voiceMsg : byte[]
        + Message()
        + getChannel()
        + getMsg()
        + getName()
        + getOnlineCount()
        + getPicture()
        + getPictureMsg()
        + getStatus()
        + getType()
        + getUserlist()
        + getUsers()
        + getVoiceMsg()
        + setChannel()
        + setMsg()
        + setName()
        + setOnlineCount()
        + setPicture()
        + setPictureMsg()
        + setStatus()
        + setType()
        + setUserlist()
        + setUsers()
        + setVoiceMsg()
    }
  }
  

  namespace com.messages {
    enum MessageType {
      CHANNEL
      CONNECTED
      DISCONNECTED
      NOTIFICATION
      PICTURE
      SERVER
      STATUS
      USER
      VOICE
    }
  }
  

  namespace com.messages {
    enum Status {
      AWAY
      BUSY
      ONLINE
    }
  }
  

  namespace com.messages {
    class com.messages.User {
        ~ name : String
        ~ picture : String
        + User()
        + User()
        + getName()
        + getPicture()
        + getStatus()
        + setName()
        + setPicture()
        + setStatus()
    }
  }
  

  com.messages.Message .up.|> java.io.Serializable
  com.messages.Message o-- com.messages.Status : status
  com.messages.Message o-- com.messages.MessageType : type
  com.messages.User .up.|> java.io.Serializable
  com.messages.User o-- com.messages.Status : status


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
